Изменения в footer и snippets

--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -108,8 +108,8 @@
 </main>
 
 <footer class="footer mt-auto py-3">
-    <span class="text-muted">&copy; Шиховцов Вадим, {% now "Y" %}. <br>
-        Шаблон заготовка для урока</span>
+    <span class="text-muted">&copy; Кислов Евгений, {% now "Y" %}. <br>
+        Проект по тебе урока</span>
 </footer>
 
 <!-- Optional JavaScript -->
