--- a/templates/pages/add_snippet.html
+++ b/templates/pages/add_snippet.html
@@ -100,8 +100,8 @@
 
 <footer class="footer mt-auto py-3">
     <div class="container">
-    <span class="text-muted">&copy; Шиховцов Вадим, {% now "Y" %}. <br>
-        Шаблон заготовка для урока</span>
+    <span class="text-muted">&copy; Кислов Евгений, {% now "Y" %}. <br>
+        Проект по теме урока</span>
     </div>
 </footer>
 
