Добавлены сниппеты, стили, форма авторизации

--- a/templates/pages/view_snippets.html
+++ b/templates/pages/view_snippets.html
@@ -14,7 +14,6 @@
     <div class="row">
         <div class="col">
             <p>На данной страницы будут отображаться все созданные сниппеты.</p>
-            <p>Пока тут просто пример, но скоро заменим реальными сниппетами из БД!</p>
             <hr>
         </div>
     </div>
@@ -22,26 +21,30 @@
     <div class="row">
         <div class="col">
             <table class="table table-striped">
-                <thead class="thead-dark">
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Название</th>
-                    <th scope="col">Дата создания</th>
-                </tr>
+                <thead class="table-dark">
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Название</th>
+                        <th scope="col">Дата создания</th>
+                        <th scope="col">Удалить</th>
+                    </tr>
                 </thead>
                 <tbody>
-
-                <tr>
-                    <td scope="row">1</td>
-                    <td><a href="/snippets/1">Пример сниппета</a></td>
-                    <td>23.05.2019 11:32</td>
-                </tr>
-
-                <tr>
-                    <td scope="row">2</td>
-                    <td><a href="/snippets/2">И ещё один пример</a></td>
-                    <td>23.05.2019 11:34</td>
-                </tr>
+                    {% for snippet in snippets %}
+                        <tr>
+                            <td scope="row"> {{ snippet.id }} </td>
+                            <td><a href="{% url "snippet-detail" snippet.id %}"> {{ snippet.name }}</a>
+                                <a href="{% url "snippet-delete" snippet.id %}">
+                                    <i style="color: red;" class="fa-solid fa-trash"></i>
+                                </a>
+                                <a href="{% url "snippet-edit" snippet.id %}">
+                                    <i style="color: red;" class="fas fa-edit"></i>
+                                </a>
+                            </td>
+                            <td> {{ snippet.creation_date }} </td>
+                            <td><a href="{% url "snippet-delete" snippet.id %}"> Удалить </a></td>
+                        </tr>
+                    {% endfor %}    
 
                 </tbody>
             </table>
