--- a/templates/inc/inc-footer.html
+++ b/templates/inc/inc-footer.html
@@ -1,6 +1,5 @@
 <footer class="footer mt-auto py-3">
     <div class="container">
-    <span class="text-muted">&copy; Шиховцов Вадим, {% now "Y" %}. <br>
-        Шаблон заготовка для урока</span>
+    <span class="text-muted">&copy; Кислов Евгений, {% now "Y" %}. <br></span>
     </div>
 </footer>
