--- a/templates/inc/inc-header.html
+++ b/templates/inc/inc-header.html
@@ -12,11 +12,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="form-inline">
-                        <a class="btn btn-outline-secondary" href="{% url 'snippets-add' %}">
-                            Добавить сниппет
-                        </a>
-                    </li>
+                    {% if request.user.is_authenticated %}
+                        <li class="form-inline">
+                            <a class="btn btn-outline-secondary" href="{% url 'snippets-add' %}">
+                                Добавить сниппет
+                            </a>
+                        </li>
+                    {% endif %}
                     <li class="form-inline">
                         <a class="btn btn-outline-info" href="{% url 'snippets-list' %}">
                             Посмотреть сниппеты
@@ -45,6 +47,13 @@
                         <div class="dropdown-divider"></div>
                     </div>
                  </div>
+                 {% if errors %}
+                    <ul>
+                    {% for error in errors %}
+                        <li style="color: red"> {{ error }} </li>
+                    {% endfor %}
+                    </ul>
+                 {% endif %}
             {% endif %}
         </div>
     </nav>
